<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/texto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoAMostrar" />

    <RadioGroup
        android:id="@+id/grupoRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/opcionParalisis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paralisis" />

        <RadioButton
            android:id="@+id/opcionQuemadura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quemadura" />

        <RadioButton
            android:id="@+id/opcionEnvenenamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envenenamiento" />

        <RadioButton
            android:id="@+id/opcionDormido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dormido" />

        <RadioButton
            android:id="@+id/opcionCongelamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congelamiento" />

        <RadioButton
            android:id="@+id/opcionDebilitado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debiltado" />
    </RadioGroup>

    <TextView
        android:id="@+id/textoDondeMostrar"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.35" />

</LinearLayout>